# quickclim_fembvvarx

./: .gitignore  CITATION.cff  README.md
inputs/: ds_RCP_annual.nc
results/: ds_multi_model_validation.nc
results/case_study_1/: ds_concentration_annual.nc  ds_final_region_rolling_kurtosis_decade_all.nc  ds_final_region_rolling_mean_decade_all.nc  ds_final_region_rolling_skewness_decade_all.nc  ds_final_region_rolling_var_decade_all.nc  ds_kurtosis_tas_global.nc  ds_kurtosis_wbgt_high.nc  ds_kurtosis_wbgt_low.nc  ds_mean_tas_global.nc  ds_mean_wbgt_high.nc  ds_mean_wbgt_low.nc  ds_skewness_tas_global.nc  ds_skewness_wbgt_high.nc  ds_skewness_wbgt_low.nc  ds_var_tas_global.nc  ds_var_wbgt_high.nc  ds_var_wbgt_low.nc
results/case_study_2/: ds_concentration_annual.nc  ds_final_region_rolling_kurtosis_decade_all.nc  ds_final_region_rolling_mean_decade_all.nc  ds_final_region_rolling_skewness_decade_all.nc  ds_final_region_rolling_var_decade_all.nc  ds_kurtosis_tas_global.nc  ds_kurtosis_wbgt_high.nc  ds_kurtosis_wbgt_low.nc  ds_mean_tas_global.nc  ds_mean_wbgt_high.nc  ds_mean_wbgt_low.nc  ds_skewness_tas_global.nc  ds_skewness_wbgt_high.nc  ds_skewness_wbgt_low.nc  ds_var_tas_global.nc  ds_var_wbgt_high.nc  ds_var_wbgt_low.nc
src/fembv-models/: LICENSE  README.md  setup.cfg  setup.py  tox.ini
src/fembv-models/fembv_models/: __init__.py  fembv_varx.py  fembv_weights.py  model_selection.py  stochastic_matrix.py  validation.py
src/fembv-models/tests/: test_dataset_1.csv  test_fembv_varx.py  test_fembv_weights.py  test_model_selection.py
(+17 files in other folders)
