[metadata]
name = fembv_models
version = attr: fembv_models.__version__
author = Dylan Harries
author_email = Dylan.Harries@csiro.au
description = Package providing code for FEM-BV models
long_description = file: README.md, LICENSE
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    cvxpy
    numpy
    scikit-learn
    scipy
    scs >= 2.1.1
setup_requires =
    setuptools >= 46.4.0
